--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <title>Mjasiri </title>
 
     <!-- load stylesheets -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">  <!-- Google web font "Open Sans" -->
+    <!--<link rel="stylesheet" async href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">  <!-- Google web font "Open Sans" -->
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">                <!-- Font Awesome -->
     <link rel="stylesheet" href="css/bootstrap.min.css">                                      <!-- Bootstrap style -->
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="css/datepicker.css"/>
-    <link rel="stylesheet" href="css/main.css">                                 
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/demo.css">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -62,84 +64,81 @@
             <div class="tm-section tm-bg-img" id="tm-section-1">
                 <div class="tm-bg-white ie-container-width-fix-2">
                     <div class="container ie-h-align-center-fix">
+
+                     <div class="row">
+                         <div class="col text-center">
+                             <h1 class="tm-section-title">Theme: Dear Future Generation</h1>
+                             <h2 class="tm-section-subtitle top-subtitle">Celebrating Women | Environment | Defying Barries </h2>
+                             <p class="tm-color-white tm-section-subtitle">Date: 7th April 2018</p>
+                         </div>
+                     </div>
                         <div class="row">
                             <div class="col-xs-12 ml-auto mr-auto ie-container-width-fix">
-                                <form action="index.html" method="get" class="tm-search-form tm-section-pad-2">
+
                                     <div class="form-row tm-search-form-row">
-                                        <div class="form-group tm-form-element tm-form-element-100">
-                                            <i class="fa fa-map-marker fa-2x tm-form-element-icon"></i>
-                                            <input name="city" type="text" class="form-control" id="inputCity" placeholder="Type your destination...">
-                                        </div>
-                                        <div class="form-group tm-form-element tm-form-element-50">
-                                            <i class="fa fa-calendar fa-2x tm-form-element-icon"></i>
-                                            <input name="check-in" type="text" class="form-control" id="inputCheckIn" placeholder="Check In">
-                                        </div>
-                                        <div class="form-group tm-form-element tm-form-element-50">
-                                            <i class="fa fa-calendar fa-2x tm-form-element-icon"></i>
-                                            <input name="check-out" type="text" class="form-control" id="inputCheckOut" placeholder="Check Out">
-                                        </div>
+
+                                     <div class=" countdown countdown-container container">
+                                         <div class="clock row">
+                                             <div class="clock-item clock-days countdown-time-value col-sm-6 col-md-3">
+                                                 <div class="wrap">
+                                                     <div class="inner">
+                                                         <div id="canvas-days" class="clock-canvas"></div>
+
+                                                         <div class="text">
+                                                             <p class="val">0</p>
+                                                             <p class="type-days type-time">DAYS</p>
+                                                         </div><!-- /.text -->
+                                                     </div><!-- /.inner -->
+                                                 </div><!-- /.wrap -->
+                                             </div><!-- /.clock-item -->
+
+                                             <div class="clock-item clock-hours countdown-time-value col-sm-6 col-md-3">
+                                                 <div class="wrap">
+                                                     <div class="inner">
+                                                         <div id="canvas-hours" class="clock-canvas"></div>
+
+                                                         <div class="text">
+                                                             <p class="val">0</p>
+                                                             <p class="type-hours type-time">HOURS</p>
+                                                         </div><!-- /.text -->
+                                                     </div><!-- /.inner -->
+                                                 </div><!-- /.wrap -->
+                                             </div><!-- /.clock-item -->
+
+                                             <div class="clock-item clock-minutes countdown-time-value col-sm-6 col-md-3">
+                                                 <div class="wrap">
+                                                     <div class="inner">
+                                                         <div id="canvas-minutes" class="clock-canvas"></div>
+
+                                                         <div class="text">
+                                                             <p class="val">0</p>
+                                                             <p class="type-minutes type-time">MINUTES</p>
+                                                         </div><!-- /.text -->
+                                                     </div><!-- /.inner -->
+                                                 </div><!-- /.wrap -->
+                                             </div><!-- /.clock-item -->
+
+                                             <div class="clock-item clock-seconds countdown-time-value col-sm-6 col-md-3">
+                                                 <div class="wrap">
+                                                     <div class="inner">
+                                                         <div id="canvas-seconds" class="clock-canvas"></div>
+
+                                                         <div class="text">
+                                                             <p class="val">0</p>
+                                                             <p class="type-seconds type-time">SECONDS</p>
+                                                         </div><!-- /.text -->
+                                                     </div><!-- /.inner -->
+                                                 </div><!-- /.wrap -->
+                                             </div><!-- /.clock-item -->
+                                         </div><!-- /.clock -->
+                                     </div><!-- /.countdown-wrapper -->
+
                                     </div>
-                                    <div class="form-row tm-search-form-row">
-                                        <div class="form-group tm-form-element tm-form-element-2">
-                                            <select name="adult" class="form-control tm-select" id="adult">
-                                                <option value="">Adult</option>
-                                                <option value="1">1</option>
-                                                <option value="2">2</option>
-                                                <option value="3">3</option>
-                                                <option value="4">4</option>
-                                                <option value="5">5</option>
-                                                <option value="6">6</option>
-                                                <option value="7">7</option>
-                                                <option value="8">8</option>
-                                                <option value="9">9</option>
-                                                <option value="10">10</option>
-                                            </select>
-                                            <i class="fa fa-2x fa-user tm-form-element-icon"></i>
-                                        </div>
-                                        <div class="form-group tm-form-element tm-form-element-2">
-                                            <select name="children" class="form-control tm-select" id="children">
-                                                <option value="">Children</option>
-                                                <option value="0">0</option>
-                                                <option value="1">1</option>
-                                                <option value="2">2</option>
-                                                <option value="3">3</option>
-                                                <option value="4">4</option>
-                                                <option value="5">5</option>
-                                                <option value="6">6</option>
-                                                <option value="7">7</option>
-                                                <option value="8">8</option>
-                                                <option value="9">9</option>
-                                                <option value="10">10</option>
-                                            </select>
-                                            <i class="fa fa-user tm-form-element-icon tm-form-element-icon-small"></i>
-                                        </div>
-                                        <div class="form-group tm-form-element tm-form-element-2">
-                                            <select name="room" class="form-control tm-select" id="room">
-                                                <option value="">Room</option>
-                                                <option value="1">1</option>
-                                                <option value="2">2</option>
-                                                <option value="3">3</option>
-                                                <option value="4">4</option>
-                                                <option value="5">5</option>
-                                                <option value="6">6</option>
-                                                <option value="7">7</option>
-                                                <option value="8">8</option>
-                                                <option value="9">9</option>
-                                                <option value="10">10</option>
-                                            </select>
-                                            <i class="fa fa-2x fa-bed tm-form-element-icon"></i>
-                                        </div>
-                                        <div class="form-group tm-form-element tm-form-element-2">
-                                            <button type="submit" class="btn btn-primary tm-btn-search">Check Availability</button>
-                                        </div>
-                                      </div>
-                                      <div class="form-row clearfix pl-2 pr-2 tm-fx-col-xs">
-                                          <p class="tm-margin-b-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                          <a href="#" class="ie-10-ml-auto ml-auto mt-1 tm-font-semibold tm-color-primary">Need Help?</a>
-                                      </div>
-                                </form>
+
                             </div>
                         </div>
+
+
                     </div>
                 </div>
             </div>
@@ -149,8 +148,8 @@
                     <div class="row">
                         <div class="col text-center">
                             <h2 class="tm-section-title">Telling Africa's Stories</h2>
-                            <p class="tm-color-white tm-section-subtitle">Subscribe to get our newsletters</p>
-                            <a href="#" class="tm-color-white tm-btn-white-bordered">Subscribe Newletters</a>
+                            <p class="tm-color-white tm-section-subtitle">Want to Join Us? Subscribe below</p>
+                            <a href="#" class="tm-color-white tm-btn-white-bordered">Subscribe here</a>
                         </div>
                     </div>
                 </div>
@@ -375,8 +374,15 @@
         <script src="js/bootstrap.min.js"></script>                 <!-- https://getbootstrap.com/ -->
         <script src="js/datepicker.min.js"></script>                <!-- https://github.com/qodesmith/datepicker -->
         <script src="js/jquery.singlePageNav.min.js"></script>      <!-- Single Page Nav (https://github.com/ChrisWojcik/single-page-nav) -->
-        <script src="slick/slick.min.js"></script>                  <!-- http://kenwheeler.github.io/slick/ -->
+        <script src="slick/slick.min.js"></script>
+        <!-- Adding Countdown Timer -->
+        <script type="text/javascript" src="js/kinetic.js"></script>
+        <script type="text/javascript" src="js/countdown.js"></script>
+
+                          <!-- http://kenwheeler.github.io/slick/ -->
         <script>
+
+
 
             /* Google map
             ------------------------------------------------*/
@@ -482,8 +488,9 @@
                 loadGoogleMap();
 
                 // Date Picker
-                const pickerCheckIn = datepicker('#inputCheckIn');
-                const pickerCheckOut = datepicker('#inputCheckOut');
+
+                //const pickerCheckIn = datepicker('#inputCheckIn');
+                //const pickerCheckOut = datepicker('#inputCheckOut');
 
                 // Slick carousel
                 setCarousel();
@@ -510,6 +517,17 @@
 
                 // Update the current year in copyright
                 $('.tm-current-year').text(new Date().getFullYear());
+            });
+
+
+            $('document').ready(function() {
+                'use strict';
+
+             $('.countdown').final_countdown({
+                    'start':0,
+                    'end': 8294400,
+                    'now': 4752000
+                });
             });
 
         </script>
