added content to the main page

--- a/index.html
+++ b/index.html
@@ -47,14 +47,17 @@
                                     <a class="nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
                                   </li>
                                   <li class="nav-item">
-                                    <a class="nav-link" href="#tm-section-4">Portfolio</a>
+                                    <a class="nav-link" href="#tm-section-2">About Us</a>
                                   </li>
+                                  <!--
                                   <li class="nav-item">
                                     <a class="nav-link" href="#tm-section-5">Blog Entries</a>
                                   </li>
+                                  -->
                                   <li class="nav-item">
                                     <a class="nav-link" href="#tm-section-6">Contact Us</a>
                                   </li>
+
                                 </ul>
                             </div>
                         </nav>
@@ -143,7 +146,7 @@
                 </div>
             </div>
 
-            <div class="tm-section-2">
+            <div class="tm-section-2" id="tm-section-2">
                 <div class="container">
                     <div class="row">
                         <div class="col text-center">
@@ -159,29 +162,27 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="tm-section-down-arrow">
                     <polygon fill="#ee5057" points="0,0  100,0  50,60"></polygon>
                 </svg>
-                <div class="container tm-pt-5 tm-pb-4">
-                    <div class="row text-center">
-                        <article class="col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-article">
-                            <i class="fa tm-fa-6x fa-legal tm-color-primary tm-margin-b-20"></i>
-                            <h3 class="tm-color-primary tm-article-title-1">Pellentesque accumsan arcu nec dolor tempus</h3>
-                            <p>Pellentesque at velit ante. Duis scelerisque metus vel felis porttitor gravida. Donec at felis libero. Mauris odio tortor.</p>
-                            <a href="#" class="text-uppercase tm-color-primary tm-font-semibold">Continue reading...</a>
+                <div class="container tm-pb-4">
+                    <div class="row ">
+                        <article class="col-sm-12 col-md-6 col-lg-6 col-xl-6 text-right">
+                            <h3 class="tm-color-primary tm-article-title-1">About Mjasiri <i class="fa fa-cog tm-color-primary tm-margin-b-20"></i></h3>
+                            <p class="about">Mjasiri is a platform for sharing inspiring local stories. </p>
+                            <p class="about">The platform is  aimed at identifying inspiring local stories and providing them with an avenue to be heard, with the aim of inspiring people to think different and initiate action, especially changes at the local level.</p>
+                            <p class="about">The stories will all be recorded for expansion of viewership aimed at sharing such stories to the widest audience possible and targeting TV and social platforms.</p>
                         </article>
-                        <article class="col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-article">
-                            <i class="fa tm-fa-6x fa-plane tm-color-primary tm-margin-b-20"></i>
-                            <h3 class="tm-color-primary tm-article-title-1">Duis scelerisque metus vel felis porttitor</h3>
-                            <p>Pellentesque at velit ante. Duis scelerisque metus vel felis porttitor gravida. Donec at felis libero. Mauris odio tortor.</p>
-                            <a href="#" class="text-uppercase tm-color-primary tm-font-semibold">Continue reading...</a>
-                        </article>
-                        <article class="col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-article">
-                            <i class="fa tm-fa-6x fa-life-saver tm-color-primary tm-margin-b-20"></i>
-                            <h3 class="tm-color-primary tm-article-title-1">Etiam aliquam arcu at mauris consectetur</h3>
-                            <p>Pellentesque at velit ante. Duis scelerisque metus vel felis porttitor gravida. Donec at felis libero. Mauris odio tortor.</p>
-                            <a href="#" class="text-uppercase tm-color-primary tm-font-semibold">Continue reading...</a>
+                        <article class="col-sm-12 col-md-6 col-lg-6 col-xl-6 text-left">
+
+                            <h3 class="tm-color-primary tm-article-title-1"><i class="fa fa-cogs tm-color-primary tm-margin-b-20"></i> The creative approach</h3>
+                            <p class="about">The platform is designed with one principle in mind</p>
+                            <p class="about tm-font-semibold tm-font-italic">“Allow people to have a holistic storytelling experience, that takes into account different ways that people consume content” </p>
+                            <p class="about">Thus Mjasiri Platform will include stories, dramas, presentations, exhibitions, talks, poems, music etc </p>
+
+                            <a href="#" class="text-uppercase tm-color-primary tm-font-semibold">Join Us Now.</a>
                         </article>
                     </div>
                 </div>
             </div>
+            <!--
 
             <div class="tm-section tm-section-pad tm-bg-gray" id="tm-section-4">
                 <div class="container">
@@ -276,7 +277,9 @@
                     </div>
                 </div>
             </div>
+           -->
 
+                           <!--
             <div class="tm-bg-video">
                 <div class="overlay">
                     <i class="fa fa-5x fa-play-circle tm-btn-play"></i>
@@ -287,6 +290,7 @@
                     <source src="videos/video.ogg" type="video/ogg">
                     Your browser does not support the video tag.
                 </video>
+
                 <div class="tm-section tm-section-pad tm-bg-img" id="tm-section-5">
                     <div class="container ie-h-align-center-fix">
                         <div class="row tm-flex-align-center">
@@ -326,14 +330,32 @@
                         </div>
                     </div>
                 </div>
+               -->
             </div>
 
             <div class="tm-section tm-section-pad tm-bg-img tm-position-relative" id="tm-section-6">
                 <div class="container ie-h-align-center-fix">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-7">
-                            <div id="google-map"></div>
-                        </div>
+                        <span class="col-sm-12 col-md-6 col-lg-6 col-xl-6 text-left">
+
+                            <h3 class="tm-color-primary tm-article-title-1"><i class="fa fa-comments-o tm-color-primary tm-margin-b-20"></i> Contact Us</h3>
+                            <p class="about">We would be happy to hear from you. Feel free to call, send us an email, Tweet us or simply complete the enquiry form. Also feel free to just drop in and say Hi!!
+                            Come say Hi!</p>
+                            <p class="about tm-font-semibold tm-font-italic">“We are constantly looking for opportunities to work with other people” </p>
+
+                            <p class="about tm-color-primary tm-font-semibold">
+                                                        Reach us through:</p>
+                            <p class="about">
+                                                        Mobile: (255) 717 153 080<br>
+                                                        Mobile2: (255) 684 788 499<br>
+                                                        Email: hello@mjasiri.or.tz<br>
+                                                        <i class="fa fa-twitter-square tm-color-primary"></i> <a href="http://twitter.com/mjasiritz" targer="_blank">@mjasiritz</a><br>
+                                                       <i class="fa fa-instagram tm-color-primary"></i> <a href="http://instagram.com/mjasiritz" target="_blank">@mjasiritz</a></p>
+                        </span>
+
+
+
+
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-5 mt-3 mt-md-0">
                             <div class="tm-bg-white tm-p-4">
                                 <form action="index.html" method="post" class="contact-form">
@@ -362,7 +384,7 @@
 
                     <div class="row">
                         <p class="col-sm-12 text-center tm-font-light tm-color-white p-4 tm-margin-b-0">
-                        Copyright &copy; <span class="tm-current-year">2018    </span>    <a href="http://studio19.co.tz" class="tm-color-primary tm-font-normal" target="_parent">Studio 19</a></p>
+                         &copy; <span class="tm-color-primary" >Telling Africa's Stories </span>&nbsp &nbsp<i class="fa fa-bullseye"></i>   <a href="http://studio19.co.tz" class="tm-color-primary tm-font-normal" target="_parent">Studio 19</a></p>
                     </div>
                 </div>
             </footer>
@@ -414,7 +436,7 @@
             function loadGoogleMap(){
                 var script = document.createElement('script');
                 script.type = 'text/javascript';
-                script.src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyDVWt4rJfibfsEDvcuaChUaZRS5NXey1Cs&v=3.exp&sensor=false&' + 'callback=initialize';
+                script.src = 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.933250694504!2d39.241253614295026!3d-6.777978768167249!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4c0b41229c45%3A0x9d1921f6fc3b9df2!2sStudio+19+Ltd!5e0!3m2!1sen!2stz!4v1519590640567' + 'callback=initialize';
                 document.body.appendChild(script);
             }
 
