Added the same colors

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="tm-bg-white ie-container-width-fix-2">
                     <div class="container ie-h-align-center-fix">
 
-                     <div class="row">
+                     <div class="row theme-container">
                          <div class="col text-center">
                              <h1 class="tm-section-title">Theme: Dear Future Generation</h1>
                              <h2 class="tm-section-subtitle top-subtitle">Celebrating Women | Environment | Defying Barries </h2>
@@ -82,7 +82,7 @@
 
                                      <div class=" countdown countdown-container container">
                                          <div class="clock row">
-                                             <div class="clock-item clock-days countdown-time-value col-sm-6 col-md-3">
+                                             <div class="clock-item clock-days countdown-time-value col-xs-3 col-sm-3 col-md-3">
                                                  <div class="wrap">
                                                      <div class="inner">
                                                          <div id="canvas-days" class="clock-canvas"></div>
@@ -95,7 +95,7 @@
                                                  </div><!-- /.wrap -->
                                              </div><!-- /.clock-item -->
 
-                                             <div class="clock-item clock-hours countdown-time-value col-sm-6 col-md-3">
+                                             <div class="clock-item clock-hours countdown-time-value col-xs-3 col-sm-3 col-md-3">
                                                  <div class="wrap">
                                                      <div class="inner">
                                                          <div id="canvas-hours" class="clock-canvas"></div>
@@ -108,7 +108,7 @@
                                                  </div><!-- /.wrap -->
                                              </div><!-- /.clock-item -->
 
-                                             <div class="clock-item clock-minutes countdown-time-value col-sm-6 col-md-3">
+                                             <div class="clock-item clock-minutes countdown-time-value col-xs-3 col-sm-3 col-md-3">
                                                  <div class="wrap">
                                                      <div class="inner">
                                                          <div id="canvas-minutes" class="clock-canvas"></div>
@@ -121,7 +121,7 @@
                                                  </div><!-- /.wrap -->
                                              </div><!-- /.clock-item -->
 
-                                             <div class="clock-item clock-seconds countdown-time-value col-sm-6 col-md-3">
+                                             <div class="clock-item clock-seconds countdown-time-value col-xs-3 col-sm-3 col-md-3">
                                                  <div class="wrap">
                                                      <div class="inner">
                                                          <div id="canvas-seconds" class="clock-canvas"></div>
@@ -160,7 +160,7 @@
 
             <div class="tm-section tm-position-relative">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="tm-section-down-arrow">
-                    <polygon fill="#ee5057" points="0,0  100,0  50,60"></polygon>
+                    <polygon fill="#E47735" points="0,0  100,0  50,60"></polygon>
                 </svg>
                 <div class="container tm-pb-4">
                     <div class="row ">
